--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -10,7 +10,7 @@
     <section class="blog">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="      arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Блог</span>
         </div>
 
@@ -46,17 +46,17 @@
         </div>
 
         <div class="page-showMore">
-            <img class="page-showMore-arrow" src="../img/blog/shape.svg" alt="shape"/>
+            <img class="page-showMore-arrow" src="@img/icons/icons.svg#shapeMore" alt="shapeMore"/>
         </div>
 
         <div class="blog-pagination">
-            <img class="blog-pagination-img" src="../img/blog/pagination1.svg" alt="pagination1"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination2.svg" alt="pagination2"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination3.svg" alt="pagination3"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination4.svg" alt="pagination4"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination5.svg" alt="pagination5"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination6.svg" alt="pagination6"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination30.svg" alt="pagination30"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination1" alt="pagination1"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination2" alt="pagination2"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination3" alt="pagination3"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination4" alt="pagination4"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination5" alt="pagination5"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination6" alt="pagination6"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination30" alt="pagination30"/>
         </div>
 
     </section>
