--- a/src/html/dropdown.html
+++ b/src/html/dropdown.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+         <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -35,7 +35,9 @@
     <div class="dropdown-main-item">
       <p class="main-item-text">Решение для начинающего</p>
       <p class="main-item-title">малого бизнеса</p>
-      <button class="details-btn">То что нужно!</button>
+      <button class="details-btn">То что нужно!
+        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
+      </button>
       <img class="page-arrow" />
     </div>
 
@@ -43,27 +45,27 @@
 
   <div class="dropdown-connect">
     <div class="dropout-connect-item">
-      <img class="connect-item-img"/>
+      <img class="connect-item-img" src="@img/icons/icons.svg#call" alt="call"/>
       <span class="connect-item-text">+7 980 375 22 54</span>
     </div>
 
     <div class="dropdown-connect-item">
-      <img class="connect-item-img"/>
+      <img class="connect-item-img" src="@img/icons/icons.svg#email" alt="email"/>
       <span class="connect-item-text">info@viatekmedia</span>
     </div>
 
     <div class="dropdown-connect-item">
-      <img class="connect-item-img"/>
+      <img class="connect-item-img" src="@img/icons/icons.svg#person" alt="person"/>
       <span class="connect-item-text">Связаться с нами</span>
     </div>
 
     <div class="dropdown-connect-item">
-      <img class="connect-item-img"/>
+      <img class="connect-item-img" src="@img/icons/icons.svg#whatsup-color" alt="whatsup"/>
       <span class="connect-item-text">WhatsApp </span>
     </div>
 
     <div class="dropdown-connect-item">
-      <img class="connect-item-img"/>
+      <img class="connect-item-img" src="@img/icons/icons.svg#telegram-color" alt="telegram"/>
       <span class="connect-item-text">Telegram </span>
     </div>
   </div>
