--- a/src/html/integrations.html
+++ b/src/html/integrations.html
@@ -10,16 +10,16 @@
     <section class="integrations">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Интеграции</span>
         </div>
 
         <p class="page-title">Интеграции</p>
         <div class="page-header">
             <button class="page-blueBtn">ЗАКАЗАТЬ ИНТЕГРАЦИЮ!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -32,27 +32,27 @@
             <p class="integrations-content-title">Наша компания оказывает услуги по интеграции на сайт или CRM с:</p>
             <div class="page-list-list">
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Платёжными системами</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Сервисами SMS-рассылки</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Сервисами E-mail-рассылки</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Системой учёта товаров</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Системами доставки</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Особенная интеграция (программы по запросу)</span>
                 </div>
                 <p class="integrations-description-text">Для оценки времени и стоимости нестандартной интеграции со сторонней системой Вам необходимо оставить заявку на сайте с указанием системы и описанием задачи.</p>
@@ -63,22 +63,22 @@
         <div class="page-pros">
             <p class="page-pros-title">Плюсы работы с нами</p>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
-                <p class="pros-item-header">Квалификация</p>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
+                <p class="pros-item-header">Квалификация сотрудников</p>
                 <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
                 <p class="pros-item-header">Индивидуальный подход</p>
                 <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
