--- a/src/html/internet-shops.html
+++ b/src/html/internet-shops.html
@@ -10,9 +10,9 @@
     <section class="internet">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Разработка интернет-магазинов</span>
         </div>
 
@@ -23,7 +23,7 @@
                 <p class="page-header-boldText">малого бизнеса</p>
             </div>
             <button class="page-blueBtn">ТО ЧТО НУЖНО!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -41,37 +41,37 @@
         <div class="page-pros">
             <p class="page-pros-title">Плюсы работы с нами</p>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
                 <p class="pros-item-header">Комплексный подход</p>
                 <p class="pros-item-text">Командная работа над проектом - залог успеха</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
                 <p class="pros-item-header">Квалификация</p>
                 <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/result.svg" alt="result"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>
                 <p class="pros-item-header">Быстрый результат</p>
                 <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/support.svg" alt="support"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>
                 <p class="pros-item-header">Дальнейшее сопровождение</p>
                 <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/quality.svg" alt="quality"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>
                 <p class="pros-item-header">Знак качества</p>
                 <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
             </div>
@@ -82,23 +82,23 @@
 
             <div class="page-list-list">
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Адаптация к мобильной версии</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Построим для вас CRM;</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
                 </div>
             </div>
@@ -107,11 +107,11 @@
 
             <div class="page-list-list">
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">SEO-оптимизацию</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
                 </div>
             </div>
