--- a/src/html/specialists.html
+++ b/src/html/specialists.html
@@ -10,7 +10,7 @@
     <section class="specialists">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Наши специалисты</span>
         </div>
 
@@ -87,30 +87,30 @@
         </div>
 
         <div class="page-showMore">
-            <img class="page-showMore-arrow" src="../img/blog/shape.svg" alt="shape"/>
+            <img class="page-showMore-arrow" src="@img/icons/icons.svg#shapeMore" alt="shapeMore"/>
         </div>
 
         <div class="blog-pagination">
-            <img class="blog-pagination-img" src="../img/blog/pagination1.svg" alt="pagination1"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination2.svg" alt="pagination2"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination3.svg" alt="pagination3"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination4.svg" alt="pagination4"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination5.svg" alt="pagination5"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination6.svg" alt="pagination6"/>
-            <img class="blog-pagination-img" src="../img/blog/pagination30.svg" alt="pagination30"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination1" alt="pagination1"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination2" alt="pagination2"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination3" alt="pagination3"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination4" alt="pagination4"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination5" alt="pagination5"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination6" alt="pagination6"/>
+            <img class="blog-pagination-img" src="@img/icons/icons.svg#pagination30" alt="pagination30"/>
         </div>
 
         <aside class="connection-block">
-            <img class="connection-block-img" src="../img/services/Icon.svg" alt="connection"/>
+            <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
             <p class="connection-block-title">Мы на связи</p>
             <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
             <button class="connection-block-btn">Задать вопрос
-                <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
             </button>
             <div class="connection-block-icons">
-                <img class="connection-block-icon" src="../img/services/call1.svg" alt="call1"/>
-                <img class="connection-block-icon" src="../img/services/call2.svg" alt="call2"/>
-                <img class="connection-block-icon" src="../img/services/call3.svg" alt="call3"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
             </div>
         </aside>
 
