--- a/src/html/1C-integration.html
+++ b/src/html/1C-integration.html
@@ -10,16 +10,16 @@
     <section class="integration">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Интеграция с 1С</span>
         </div>
 
         <p class="page-title">Интеграция с 1С</p>
         <div class="page-header">
             <button class="page-blueBtn">Начать интеграцию
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -31,31 +31,31 @@
 
                 <div class="page-list-list">
                     <div class="page-list-item">
-                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="list-item-text">видеть все отчеты по позициям прозрачно с автоматическим формированием</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="list-item-text">иметь всегда актуальный каталог, ассортимент и цены</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="list-item-text">избавиться от ошибок при формировании заказа и от их потерь</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="list-item-text">быть в курсе цепочки продаж как со стороны производителя, так и со стороны покупателя</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="list-item-text">видеть максимально актуальную информацию о статусе заказа</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="list-item-text">своевременно получать информацию об ошибках</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="list-item-text">автоматический перенос данных, добавление товаров за несколько минут</span>
                     </div>
                 </div>
@@ -65,25 +65,25 @@
 
         <hr/>
 
-        <div class="page-pros">
+        <div class="page-pros"       >
             <p class="page-pros-title">Плюсы работы с нами</p>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
-                <p class="pros-item-header">Квалификация</p>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
+                <p class="pros-item-header">Квалификация сотрудников</p>
                 <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
                 <p class="pros-item-header">Индивидуальный подход</p>
                 <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
@@ -93,15 +93,15 @@
             <p class="page-list-title">Существуют различные подходы к реализации интеграции с приложениями 1С, какой из них выбрать – зависит от требований задачи.</p>
             <div class="page-list-list">
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Реализация на основе механизмов интеграции, предоставляемых платформой, своего собственного специализированного API на стороне приложения 1С</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Использование механизмов интеграции платформы, которые предоставляют доступ снаружи к объектной модели приложения и не требуют доработки приложения или создания расширения.</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="list-item-text">Использование готовых прикладных протоколов, реализованных в типовых решениях 1С.</span>
                 </div>
             </div>
