--- a/src/html/amocrm.html
+++ b/src/html/amocrm.html
@@ -10,16 +10,16 @@
     <section class="amocrm">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">amoCRM</span>
         </div>
 
         <p class="page-title">amoCRM</p>
         <div class="page-header">
             <button class="page-blueBtn">НУЖНА КОНСУЛЬТАЦИЯ!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -34,42 +34,42 @@
             <p class="page-list-blueTitle">Почему amoCRM?</p>
             <p class="page-list-title">Консультации по Битрикс24 и AmoCRM, помощь в настройке портала</p>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Анализируем, консультируем и даем рекомендации по использованию инструментов Битрикс24 и amoCRM в Вашем портале;</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Любые вопросы по настройке инструментов Битрикс24 и amoCRM и использованию портала</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Консультируем по версиям Битрикс24 и amoCRM;</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Настраиваем инструменты Битрикс24 и amoCRM по запросу.</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Помощь в настройке роботов автоматизации</span>
             </div>
 
             <p class="page-list-title">Администрирование и настройка вашего сервера</p>
 
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Настройка сервера под требования коробочной версии Битрикс24 и amoCRM без проблем и ошибок;</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Настройка резервного копирования;</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Регулярные проверки и мониторинг;</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Миграция из облака в коробку и т.д.</span>
             </div>
             <img src="../img/amocrm/girl_amoCRM%201.png" alt="girl_amoCRM"/>
@@ -78,48 +78,54 @@
         <div class="page-list-block">
             <p class="page-list-title">Бонусы</p>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Введение и обучение сотрудников после внедрения</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">После внедрения вы получаете бесплатно 1 месяц технической поддержки и сопровождения</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Настройка одной воронки продаж</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Оптимизируем все процессы и взаимодействие сотрудников отделов между собой</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Проведем автоматизацию системы</span>
             </div>
         </div>
 
         <div class="page-pros">
             <p class="page-pros-title">Плюсы работы с нами</p>
+
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
-                <p class="pros-item-header">Квалификация</p>
-                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-            </div>
-            <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
-                <p class="pros-item-header">Индивидуальный подход</p>
-                <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
+                <p class="pros-item-header">Квалификация сотрудников</p>
+                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+            </div>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
+                <p class="pros-item-header">Легальное, лицензионное ПО</p>
+                <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
+            </div>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
+                <p class="pros-item-header">Индивидуальный подход</p>
+                <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
         </div>
     </section>
