--- a/src/html/automation.html
+++ b/src/html/automation.html
@@ -10,16 +10,16 @@
     <section class="automation">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Автоматизация бизнес-процессов</span>
         </div>
 
         <p class="page-title">Автоматизация бизнес-процессов</p>
         <div class="page-header">
             <button class="page-blueBtn">НУЖНА КОНСУЛЬТАЦИЯ!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -36,23 +36,23 @@
                 <p class="page-list-blueTitle">Преимущества:</p>
 
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Благодаря автоматизированным бизнес-процессам, компания работает более эффективно не менее чем на 30%.</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Снижение влияния человеческого фактора на 20%</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Автоматизация 24/7 в режиме реального времени, тем самым исключаются ошибки.</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Четкое видение результатов деятельности в цифрах,регламентирование деятельности сотрудников, а отчеты могут формироваться сами.</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Избавление от шаблонных действий (освобождается временной ресурс)</span>
                 </div>
                 <img class="content-img" src="../img/automation/roboarm.png" alt="roboarm"/>
@@ -64,25 +64,31 @@
 
             <div class="page-pros">
                 <p class="page-pros-title">Плюсы работы с нами</p>
+
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
-                    <p class="pros-item-header">Квалификация</p>
-                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                </div>
-                <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                    <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                     <p class="pros-item-header">Опыт более 12 лет</p>
                     <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
                 </div>
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
-                    <p class="pros-item-header">Индивидуальный подход</p>
-                    <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+                    <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
+                    <p class="pros-item-header">Квалификация сотрудников</p>
+                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
                 </div>
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                    <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                     <p class="pros-item-header">Максимальная прозрачность</p>
                     <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+                </div>
+                <div class="page-pros-item">
+                    <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
+                    <p class="pros-item-header">Легальное, лицензионное ПО</p>
+                    <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
+                </div>
+                <div class="page-pros-item">
+                    <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
+                    <p class="pros-item-header">Индивидуальный подход</p>
+                    <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
                 </div>
             </div>
         </div>
