--- a/src/html/cases.html
+++ b/src/html/cases.html
@@ -10,7 +10,7 @@
     <section class="cases">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Кейсы</span>
         </div>
 
@@ -22,7 +22,7 @@
                     <img class="content-item-logo" src="../img/cases/logo1.png" alt="logo1"/>
                     <p class="content-item-title">Многопрофильный медицинский центр имени Святослава Федорова в Москве</p>
                     <button class="details-btn">Подронее
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <img class="content-item-img" src="../img/cases/image1.png" alt="image1"/>
@@ -33,7 +33,7 @@
                     <img class="content-item-logo" src="../img/cases/logo2.png" alt="logo2"/>
                     <p>Интернет-магазин програмного обеспечения.</p>
                     <button class="details-btn">Подронее
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <img class="content-item-img2" src="../img/cases/image2.png" alt="image2"/>
@@ -45,7 +45,7 @@
                     <img class="content-item-logo" src="../img/cases/logo3.png" alt="logo3"/>
                     <p>Группа компаний по производству сельскохозяйственной продукции</p>
                     <button class="details-btn">Подронее
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <img class="content-item-img4" src="../img/cases/image4.png" alt="image4"/>
@@ -57,7 +57,7 @@
                     <img class="content-item-logo" src="../img/cases/logo4.png" alt="logo4"/>
                     <p class="content-item-title">Семейный развлекательный центр Нижневартовска</p>
                     <button class="details-btn">Подронее
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <img class="content-item-img" src="../img/cases/image6.png" alt="image6"/>
@@ -68,7 +68,7 @@
                     <img class="content-item-logo" src="../img/cases/logo5.png" alt="logo5"/>
                     <p class="content-item-title">Сайт клиники по диагностике и лечению катаракты</p>
                     <button class="details-btn">Подронее
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <img class="content-item-img" src="../img/cases/image7.png" alt="image7"/>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="page-showMore">
-            <img class="page-showMore-arrow" src="../img/blog/shape.svg" alt="shape"/>
+            <img class="page-showMore-arrow" src="@img/icons/icons.svg#shapeMore" alt="shape"/>
         </div>
 
     </section>
