--- a/src/html/company.html
+++ b/src/html/company.html
@@ -10,14 +10,14 @@
     <section class="company">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">О нас</span>
         </div>
 
         <div class="company-first">
             <p class="company-first-title">О компании</p>
             <div class="page-warning">
-                <img class="page-warning-img" src="../img/company/warning.svg" alt="warning"/>
+                <img class="page-warning-img" src="@img/icons/icons.svg#warning" alt="warning"/>
                 <span class="page-warning-text">Viatekmedia - упрощаем процессы вашего бизнеса, повышаем качество</span>
             </div>
             <p class="company-first-text">Каждый из вас имеет свою организацию бизнеса. Именно поэтому команда «ТехноИнновация» ищет, изучает и выбирает для вас подходящие решения, которые прекрасно вписываются в ваши бизнес-процессы и автоматизируют их. Ведь вы понимаете и разделяете нашу страсть в выборе исключительно качественных продуктов и решений.</p>
@@ -30,7 +30,7 @@
                 <div class="company-second-block-1-cont">
                     <p class="company-second-block-1-cont-title">Совершенство и развитие</p>
                     <div class="page-warning">
-                        <img class="page-warning-img" src="../img/company/warning.svg" alt="warning"/>
+                        <img class="page-warning-img" src="@img/icons/icons.svg#warning" alt="warning"/>
                         <span class="page-warning-text">Viatekmedia - идет в ногу со временем</span>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
             <div class="company-third-block">
                 <p class="company-third-block-title">Миссия компании</p>
                 <div class="page-warning">
-                    <img class="page-warning-img" src="../img/company/warning.svg" alt="warning"/>
+                    <img class="page-warning-img" src="@img/icons/icons.svg#warning" alt="warning"/>
                     <span class="page-warning-text">Улучшать пока вы не станете лучшими!</span>
                 </div>
                 <p class="company-third-block-text">Мы работаем чтобы помочь вашему бизнесу стать более успешными, автоматизируя процессы перераспределить высвободившийся временной ресурс для создания новых и нужных благ человеку и обществу.</p>
@@ -59,7 +59,7 @@
                 <div class="company-forth-block-cont">
                     <p class="company-forth-block-cont-title">Индивидуальность</p>
                     <div class="page-warning">
-                        <img class="page-warning-img" src="../img/company/warning.svg" alt="warning"/>
+                        <img class="page-warning-img" src="@img/icons/icons.svg#warning" alt="warning"/>
                         <span class="page-warning-text">В умелых руках любой инструмент может работать с 100% отдачей!</span>
                     </div>
                     <p class="company-forth-block-cont-text">Ваша индивидуальность определяет направление, в котором мы движемся. Именно вы задаете темп и вектор вашего развития, а мы делаем наши решения соответствующимиим.</p>
