--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -21,11 +21,11 @@
                 <div class="main-tools-item">
                     <p class="main-tools-title">Телефоны:</p>
                     <div class="main-tools-info">
-                        <img class="main-tools-img" src="../img/contacts/call.svg" alt="call"/>
+                        <img class="main-tools-img" src="@img/icons/icons.svg#call" alt="call"/>
                         <span class="main-tools-text">+7 980 375 22 54</span>
                     </div>
                     <div class="main-tools-info">
-                        <img class="main-tools-img" src="../img/contacts/call.svg" alt="call"/>
+                        <img class="main-tools-img" src="@img/icons/icons.svg#call" alt="call"/>
                         <span class="main-tools-text">+7 910 360 63 92</span>
                     </div>
                 </div>
@@ -33,13 +33,13 @@
                 <div class="main-tools-item">
                     <p class="main-tools-title">E-mail:</p>
                     <div class="main-tools-info">
-                        <img class="main-tools-img" src="../img/contacts/email.svg" alt="email"/>
+                        <img class="main-tools-img" src="@img/icons/icons.svg#email" alt="email"/>
                         <span class="main-tools-text">info@viatekmedia</span>
                     </div>
 
                     <p class="main-tools-title">Режим работы:</p>
                     <div class="main-tools-info">
-                        <img class="main-tools-img" src="../img/contacts/calendar.svg" alt="calendar"/>
+                        <img class="main-tools-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                         <div class="main-tools-box">
                             <p class="main-tools-text">Пн-Пт 9:00 — 17:00</p>
                             <p class="main-tools-text">Сб-Вс</p>
@@ -51,15 +51,15 @@
                 <div class="main-tools-item">
                     <p class="main-tools-title">Мессенджеры:</p>
                     <div class="main-tools-info">
-                        <img class="main-tools-img" src="../img/contacts/telegram.svg" alt="telegram"/>
+                        <img class="main-tools-img" src="@img/icons/icons.svg#telegram-color" alt="telegram"/>
                         <span class="main-tools-text">+7 910 360 63 92</span>
                     </div>
                     <div class="main-tools-info">
-                        <img class="main-tools-img" src="../img/contacts/whatsup.svg" alt="whatsup"/>
+                        <img class="main-tools-img" src="@img/icons/icons.svg#whatsup-color" alt="whatsup"/>
                         <span class="main-tools-text">+7 910 360 63 92</span>
                     </div>
                     <div class="main-tools-info">
-                        <img class="main-tools-img" src="../img/contacts/viber.svg" alt="viber"/>
+                        <img class="main-tools-img" src="@img/icons/icons.svg#viber-color" alt="viber"/>
                         <span class="main-tools-text">+7 910 360 63 92</span>
                     </div>
                 </div>
@@ -125,14 +125,14 @@
             </div>
 
             <button class="contacts-form-btn">
-                <img class="contacts-form-img" src="../img/contacts/shape.svg" alt="shape"/>
+                <img class="contacts-form-img" src="@img/icons/icons.svg#pencil" alt="shape"/>
                 Отправить
             </button>
 
             <hr/>
 
             <div class="contacts-form-secure">
-                <img class="form-secure-img" src="../img/contacts/shape1.svg" alt="shape1"/>
+                <img class="form-secure-img" src="@img/icons/icons.svg#checkmark" alt="shape1"/>
                 <span class="form-secure-text">Мы гарантируем безопасность введенных данных. Они используются только для связи с клиентом и не хранятся на наших серверах</span>
             </div>
 
