--- a/src/html/crm-implement.html
+++ b/src/html/crm-implement.html
@@ -10,16 +10,16 @@
     <section class="crm-implement">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Внедрение CRM</span>
         </div>
 
         <p class="page-title">Внедрение CRM</p>
         <div class="page-header">
             <button class="page-blueBtn">НУЖНА КОНСУЛЬТАЦИЯ!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -38,27 +38,27 @@
                 <p class="page-list-blueTitle">Почему Битрикс24?</p>
                 <div class="page-list-list">
                     <div class="page-list-item">
-                        <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="page-list-text">Большой спектр возможностей для работы с клиентом и не только. Корпоративный портал, можно наладить работу разных отделов.</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="page-list-text">Возможность автоматизации и оптимизации бизнес-процессов</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="page-list-text">Интеграция большого количества сервисов и ПО, в том числе и с 1С</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="page-list-text">Удобный функционал</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
                     </div>
                     <div class="page-list-item">
-                        <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="page-list-text">Очень гибкий функционал, который хорошо дорабатывается под потребности компании</span>
                     </div>
                 </div>
@@ -73,48 +73,54 @@
         <div class="page-list-block">
             <p class="page-list-title">Бонусы</p>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Введение и обучение сотрудников после внедрения</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">После внедрения вы получаете бесплатно 1 месяц технической поддержки и сопровождения</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Настройка одной воронки продаж</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Оптимизируем все процессы и взаимодействие сотрудников отделов между собой</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Проведем автоматизацию системы</span>
             </div>
         </div>
 
         <div class="page-pros">
             <p class="page-pros-title">Плюсы работы с нами</p>
+
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
-                <p class="pros-item-header">Квалификация</p>
-                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-            </div>
-            <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
-                <p class="pros-item-header">Индивидуальный подход</p>
-                <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
+                <p class="pros-item-header">Квалификация сотрудников</p>
+                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+            </div>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
+                <p class="pros-item-header">Легальное, лицензионное ПО</p>
+                <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
+            </div>
+            <div class="page-pros-item">
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
+                <p class="pros-item-header">Индивидуальный подход</p>
+                <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
         </div>
 
