--- a/src/html/development.html
+++ b/src/html/development.html
@@ -11,9 +11,9 @@
 
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Создание сайтов</span>
         </div>
 
@@ -25,7 +25,7 @@
                 <p class="page-header-boldText">малого бизнеса</p>
             </div>
             <button class="page-blueBtn">ТО ЧТО НУЖНО!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -52,27 +52,27 @@
             <div class="page-pros">
                 <p class="page-pros-title">Плюсы работы с нами</p>
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
-                    <p class="pros-item-header">Квалификация</p>
+                    <img class="pros-item-img" src="   qualification" alt="qualification"/>
+                    <p class="pros-item-header">Квалификация сотрудников</p>
                     <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
                 </div>
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                    <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                     <p class="pros-item-header">Максимальная прозрачность</p>
                     <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
                 </div>
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/development/result.svg" alt="result"/>
+                    <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>
                     <p class="pros-item-header">Быстрый результат</p>
                     <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
                 </div>
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/development/support.svg" alt="support"/>
+                    <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>
                     <p class="pros-item-header">Дальнейшее сопровождение</p>
                     <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
                 </div>
                 <div class="page-pros-item">
-                    <img class="pros-item-img" src="../img/development/quality.svg" alt="quality"/>
+                    <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>
                     <p class="pros-item-header">Знак качества</p>
                     <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
                 </div>
@@ -93,23 +93,23 @@
 
                     <div class="page-list-list">
                         <div class="page-list-item">
-                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">Адаптация к мобильной версии</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">Построим для вас CRM;</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
                         </div>
                     </div>
@@ -118,11 +118,11 @@
 
                     <div class="page-list-list">
                         <div class="page-list-item">
-                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">SEO-оптимизацию</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="list-item-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
                         </div>
                     </div>
