--- a/src/html/home/fifth-screen.html
+++ b/src/html/home/fifth-screen.html
@@ -10,22 +10,22 @@
 
             <div class="fifth-screen-container">
                 <div class="fifth-screen-container-box">
-                    <img class="fifth-screen-container-box-img" src="../img/home/private.svg" alt="private"/>
+                    <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#private" alt="private"/>
                     <p class="fifth-screen-container-box-title">Личный кабинет и тарификация</p>
                     <p class="fifth-screen-container-box-text">Личный кабинет клиента, в котором вы можете в режиме реал-тайм видеть, какие задачи и на какую сумму в данный момент сделаны, какие в работе.</p>
                 </div>
                 <div class="fifth-screen-container-box">
-                    <img class="fifth-screen-container-box-img" src="../img/home/team.svg" alt="team"/>
+                    <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#team" alt="team"/>
                     <p class="fifth-screen-container-box-title">Наша команда</p>
                     <p class="fifth-screen-container-box-text">У нас 39 разработчиков в штате, что позволяет нам собирать команды под ваши нужды.</p>
                 </div>
                 <div class="fifth-screen-container-box">
-                    <img class="fifth-screen-container-box-img" src="../img/home/certificate.svg" alt="team"/>
+                    <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#certificate" alt="team"/>
                     <p class="fifth-screen-container-box-title">Сертификация</p>
                     <p class="fifth-screen-container-box-text">Все сотрудники прошли сертификацию Битрикса - на ваших проектах будут работать только проверенные разработчики.</p>
                 </div>
                 <div class="fifth-screen-container-box">
-                    <img class="fifth-screen-container-box-img" src="../img/home/clock.svg" alt="team"/>
+                    <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#clock" alt="team"/>
                     <p class="fifth-screen-container-box-title">Сроки работы</p>
                     <p class="fifth-screen-container-box-text">Вы и ваш клиент всегда знаете, когда мы начнем работу над задачей и когда закончим, так как все работы оцениваются и имеют сроки сдачи.</p>
                 </div>
