--- a/src/html/home/services.html
+++ b/src/html/home/services.html
@@ -12,22 +12,22 @@
             <div class="services-wrapper">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Наши специалисты</span>
         </div>
         <p class="page-title">Услуги</p>
 
         <aside class="connection-block">
-            <img class="connection-block-img" src="../img/services/Icon.svg" alt="connection"/>
+            <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
             <p class="connection-block-title">Мы на связи</p>
             <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
             <button class="connection-block-btn">Задать вопрос
-                <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
             </button>
             <div class="connection-block-icons">
-                <img class="connection-block-icon" src="../img/services/call1.svg" alt="call1"/>
-                <img class="connection-block-icon" src="../img/services/call2.svg" alt="call2"/>
-                <img class="connection-block-icon" src="../img/services/call3.svg" alt="call3"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
             </div>
         </aside>
 
@@ -49,18 +49,18 @@
         <!--                <img src="../img/services/integrations.png" alt="integrations"/>-->
         <!--                <img src="../img/services/CC.png" alt="CC"/>-->
         <div>
-            <div class="sixth-screen-container-arrows">
-                <div class="sixth-screen-container-arrow">
-                    <img src="../img/home/arrow_left.svg" alt="arrow" />
-                </div>
-                <div class="sixth-screen-container-arrow">
-                    <img src="../img/home/arrow_right.svg" alt="arrow" />
-                </div>
-            </div>
+<!--            <div class="swiper-arrows">-->
+<!--                <div class="swiper-arrow swiper-arrow-prev">-->
+<!--                    <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+<!--                </div>-->
+<!--                <div class="swiper-arrow swiper-arrow-next">-->
+<!--                    <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />-->
+<!--                </div>-->
+<!--            </div>-->
 
             <p class="services-chosen">Создание сайтов</p>
             <button class="details-btn">Подронее
-                <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
             </button>
         </div>
 
@@ -68,22 +68,22 @@
             <p class="page-list-title">В зависимости от бизнес-задач будущего ресурса мы готовы предложить:</p>
             <div class="page-list-list">
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Готовые сайты под ключ (здесь можно сделать переход на наш лендинг с визитками шаблонными)</span>
                 </div>
                 <div class="page-list-item">
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Индивидуальные решения под любой бизнес</span>
                 </div>
             </div>
             <p class="page-list-title">Плюсы работы с нами: </p>
             <div class="page-list-list">
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">сертифицированные сотрудники с опытом работы не менее 3х лет</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">максимальная прозрачность - вы будете в курсе всех задач и результатов...</span>
                 </div>
             </div>
