--- a/src/html/home/sixth-screen.html
+++ b/src/html/home/sixth-screen.html
@@ -11,15 +11,15 @@
                 <div class="sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                    <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
@@ -27,15 +27,15 @@
                 <div class="sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
@@ -43,15 +43,15 @@
                 <div class="sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
@@ -59,27 +59,27 @@
                 <div class="sixth-screen-container-box">
                     <p class="sixth-screen-container-box-position">Инженер-программист</p>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Опыт работы: от 1 год</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">График работы: 5/2</span>
                     </div>
                     <div class="sixth-screen-container-box-point">
-                        <img src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                         <span class="sixth-screen-container-box-point-text">Зарплата: от 40 000 р. </span>
                     </div>
                     <button class="sixth-screen-container-box-btn">Интересно!</button>
                 </div>
-<!--                <div class="sixth-screen-container-arrows">-->
-<!--                    <div class="sixth-screen-container-arrow">-->
-<!--                        <img src="../img/home/arrow_left.svg" alt="arrow" />-->
-<!--                    </div>-->
-<!--                    <div class="sixth-screen-container-arrow">-->
-<!--                        <img src="../img/home/arrow_right.svg" alt="arrow" />-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="sixth-screen-container-arrows">
+                    <div class="sixth-screen-container-arrow">
+                        <img src="../img/home/arrow_left.svg" alt="arrow" />
+                    </div>
+                    <div class="sixth-screen-container-arrow">
+                        <img src="../img/home/arrow_right.svg" alt="arrow" />
+                    </div>
+                </div>
             </div>
             <p class="sixth-screen-lowStat">А если тебе еще не хватает знаний, приходи к нам на обучение. Мы поможем освоить азы профессии программиста.</p>
 
