--- a/src/html/maintenance.html
+++ b/src/html/maintenance.html
@@ -10,16 +10,16 @@
     <section class="maintenance">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Техническое сопровождение CRM</span>
         </div>
 
         <p class="page-title">Техническое сопровождение CRM</p>
         <div class="page-header">
             <button class="page-blueBtn">НУЖНО СОПРОВОЖДЕНИЕ!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
         <p class="maintenance-description">Наша компания оказывает услуги по техническому сопровождению и развитию порталов Битрикс24 и amoCRM любого уровня сложности, независимо от того, когда и кем он был внедрен и доработан. Наша компания предоставляет гибкие тарифы по сопровождению и технической поддержке порталов. Мы позаботимся о вашей системе! Вам не придется решать вопросы производительности, обновления и изменения в связи с расширением - все это будет делать наш специалист.</p>
@@ -34,42 +34,42 @@
                 <p class="page-list-title">Консультации по Битрикс24 и AmoCRM, помощь в настройке портала</p>
 
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Анализируем, консультируем и даем рекомендации по использованию инструментов Битрикс24 и amoCRM в Вашем портале;</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Любые вопросы по настройке инструментов Битрикс24 и amoCRM и использованию портала</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Консультируем по версиям Битрикс24 и amoCRM;</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Настраиваем инструменты Битрикс24 и amoCRM по запросу.</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Помощь в настройке роботов автоматизации</span>
                 </div>
 
                 <p class="page-list-title">Администрирование и настройка вашего сервера</p>
 
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Настройка сервера под требования коробочной версии Битрикс24 и amoCRM без проблем и ошибок;</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Настройка резервного копирования;</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Регулярные проверки и мониторинг;</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Миграция из облака в коробку и т.д.</span>
                 </div>
                 <img class="maintenance-img" src="../img/maintenance/crm-girl.png" alt="crm-girl"/>
@@ -90,22 +90,22 @@
         <div class="page-pros">
             <p class="page-pros-title">Плюсы работы с нами</p>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
                 <p class="pros-item-header">Квалификация</p>
                 <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
                 <p class="pros-item-header">Индивидуальный подход</p>
                 <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
@@ -115,35 +115,35 @@
             <p class="page-costs-header">Стоимость услуг</p>
             <div class="page-costs-block">
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet1.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>
                     <p class="costs-item-header">От 4000 рублей/мес.</p>
                     <p class="costs-item-text">При заключении договора от 12 месяцев</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet2.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet2" alt="wallet2"/>
                     <p class="costs-item-header">От 4500 рублей/мес.</p>
                     <p class="costs-item-text">При заключении договора от 6 месяцев</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet3.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet3" alt="wallet3"/>
                     <p class="costs-item-header">От 5500 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet4.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet4" alt="wallet4"/>
                     <p class="costs-item-header">До 8000 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
             </div>
