--- a/src/html/mobile.html
+++ b/src/html/mobile.html
@@ -10,9 +10,9 @@
     <section class="mobile">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Разработка мобильных приложений и игр</span>
         </div>
 
@@ -20,7 +20,7 @@
 
         <div class="page-header">
             <button class="page-blueBtn">КОНСУЛЬТАЦИЯ!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -53,15 +53,15 @@
                         <p class="item-block-title">Выбор жанра игры</p>
                         <p class="item-block-text">Обычно выделяют 3 основных направления:</p>
                         <div class="page-list-item">
-                            <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="page-list-text">Hyper casual</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="page-list-text">Midcore</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="page-list-text">Hardcore</span>
                         </div>
                     </div>
@@ -146,22 +146,22 @@
         <div class="page-pros">
             <p class="page-pros-title">Плюсы работы с нами</p>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>
                 <p class="pros-item-header">Квалификация</p>
                 <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>
                 <p class="pros-item-header">Индивидуальный подход</p>
                 <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
