--- a/src/html/optimization.html
+++ b/src/html/optimization.html
@@ -10,47 +10,47 @@
     <section class="optimization">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Блог</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Как оптимизировать карточку товара для поиска</span>
         </div>
 
         <div>
             <aside>
                 <div class="optimization-nav">
-                    <img class="optimization-nav-img" src="../img/optimization/shape.svg" alt="shape"/>
+                    <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
                     <span class="optimization-nav-text">«Оптимизировать карточку»: что это значит</span>
                 </div>
                 <div>
-                    <img class="optimization-nav-img" src="../img/optimization/shape.svg" alt="shape"/>
+                    <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
                     <span class="optimization-nav-text">Специальный алгоритм</span>
                 </div>
                 <div>
-                    <img class="optimization-nav-img" src="../img/optimization/shape.svg" alt="shape"/>
+                    <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
                     <span class="optimization-nav-text">Интент запроса</span>
                 </div>
                 <div>
-                    <img class="optimization-nav-img" src="../img/optimization/shape.svg" alt="shape"/>
+                    <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
                     <span class="optimization-nav-text">Что дает грамотно оптимизированная карточка</span>
                 </div>
                 <div>
-                    <img class="optimization-nav-img" src="../img/optimization/shape.svg" alt="shape"/>
+                    <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
                     <span class="optimization-nav-text">SEO-заполнение карточки товара</span>
                 </div>
             </aside>
 
             <aside class="connection-block">
-                <img class="connection-block-img" src="../img/services/Icon.svg" alt="connection"/>
+                <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
                 <p class="connection-block-title">Мы на связи</p>
                 <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
                 <button class="connection-block-btn">Задать вопрос
-                    <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                    <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                 </button>
                 <div class="connection-block-icons">
-                    <img class="connection-block-icon" src="../img/services/call1.svg" alt="call1"/>
-                    <img class="connection-block-icon" src="../img/services/call2.svg" alt="call2"/>
-                    <img class="connection-block-icon" src="../img/services/call3.svg" alt="call3"/>
+                    <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
+                    <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
+                    <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
                 </div>
             </aside>
 
@@ -104,19 +104,19 @@
                     <p class="page-list-title">Смело можно утверждать, что SEO карточки товара — это решение сразу нескольких задач, актуальных для владельца интернет-магазина:</p>
                     <div class="page-list-list">
                         <div class="page-list-item">
-                            <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="page-list-text">повышение позиций сайта в поисковой выдаче;</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="page-list-text">привлечение целевого трафика;</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="page-list-text">снижение количества отказов, которые плохо сказываются на поведенческих факторах;</span>
                         </div>
                         <div class="page-list-item">
-                            <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                             <span class="page-list-text">рост конверсии и продаж.</span>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
             </div>
 
             <button class="optimization-back">Вернуться назад
-                <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
             </button>
         </div>
 
