--- a/src/html/plug.html
+++ b/src/html/plug.html
@@ -11,7 +11,7 @@
 
         <div class="page-header">
             <button class="page-blueBtn">КОНСУЛЬТАЦИЯ!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
 
@@ -21,41 +21,36 @@
 
             <div class="page-list-block">
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Разработка компьютерного программного обеспечения под заказ.</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Доработка CRM-систем и программирование бизнес-процессов</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Разработка сайтов</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Разработка мобильных приложений и игр</span>
                 </div>
                 <div class="page-list-item">
-                    <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                     <span class="page-list-text">Поддержка сайтов и CRM-систем</span>
                 </div>
             </div>
         </div>
 
         <div>
-            <p>Так же вы можете связаться с нами с помощью формы обратной связи</p>
-            <img src="../img/home/arrowup.svg" alt="arrowup"/>
-
-
-
 
             <div class="contacts-form">
                 <p class="contacts-form-message">Мы в мессенджерах</p>
                 <div class="contacts-form-images">
-                    <img class="connection-img" src="../img/prefooter/call1.svg" alt="call1"/>
-                    <img class="connection-img" src="../img/prefooter/call2.svg" alt="call2"/>
-                    <img class="connection-img" src="../img/prefooter/call3.svg" alt="call3"/>
+                    <img class="connection-img" src="@img/icons/icons.svg#call1" alt="call1"/>
+                    <img class="connection-img" src="@img/icons/icons.svg#call2" alt="call2"/>
+                    <img class="connection-img" src="@img/icons/icons.svg#call3" alt="call3"/>
                 </div>
                 <hr/>
                 <p class="contacts-form-text">Есть что сказать или появились вопросы?</p>
@@ -92,14 +87,14 @@
                 </div>
 
                 <button class="contacts-form-btn">
-                    <img class="contacts-form-img" src="../img/contacts/shape.svg" alt="shape"/>
+                    <img class="contacts-form-img" src="@img/icons/icons.svg#pencil" alt="shape"/>
                     Отправить
                 </button>
 
                 <hr/>
 
                 <div class="contacts-form-secure">
-                    <img class="form-secure-img" src="../img/contacts/shape1.svg" alt="shape1"/>
+                    <img class="form-secure-img" src="@img/icons/icons.svg#checkmark" alt="shape1"/>
                     <span class="form-secure-text">Мы гарантируем безопасность введенных данных. Они используются только для связи с клиентом и не хранятся на наших серверах</span>
                 </div>
 
