--- a/src/html/project.html
+++ b/src/html/project.html
@@ -10,9 +10,9 @@
     <section class="project">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Кейсы</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Центр хирургии катаракты</span>
         </div>
 
@@ -74,25 +74,25 @@
         </aside>
 
         <aside class="connection-block">
-            <img class="connection-block-img" src="../img/services/Icon.svg" alt="connection"/>
+            <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
             <p class="connection-block-title">Мы на связи</p>
             <p class="connection-block-state">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
             <button class="connection-block-btn">Задать вопрос
-                <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
             </button>
             <div class="connection-block-icons">
-                <img class="connection-block-icon" src="../img/services/call1.svg" alt="call1"/>
-                <img class="connection-block-icon" src="../img/services/call2.svg" alt="call2"/>
-                <img class="connection-block-icon" src="../img/services/call3.svg" alt="call3"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
             </div>
         </aside>
 
         <img class="project-img" src="../img/surgery/cataract.png" alt="cataract"/>
 
         <div class="project-others">
-            <img class="project-others-left" src="../img/surgery/arrow-left.svg" alt="arrow-left"/>
-            <img class="project-others-right" src="../img/surgery/arrow-right.svg" alt="arrow-right"/>
-            <p class="project-others-text">Смотреть все</p>
+            <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+            <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+            <span class="project-others-text">Смотреть все</span>
         </div>
 
     </section>
