--- a/src/html/support.html
+++ b/src/html/support.html
@@ -10,16 +10,16 @@
     <section class="support">
         <div class="page-breadcrumbs">
             <span class="page-breadcrumbs-text">Главная</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Услуги</span>
-            <img class="page-breadcrumbs-arrow" src="../img/development/Icon.svg" alt="arrow"/>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
             <span class="page-breadcrumbs-text">Поддержка сайтов</span>
         </div>
 
         <p class="page-title">Поддержка сайтов</p>
         <div class="page-header">
             <button class="page-blueBtn">НУЖНА ПОДДЕРЖКА!
-                <img class="page-blueBtn-arrow" src="../img/development/shape.svg" alt="arrow"/>
+                <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
             </button>
         </div>
         <p class="support-text">Наша команда сертифицированных специалистов оказывает сопровождение и техническую поддержку сайтов на любой стадии работы, даже если разработчиком являемся не мы. Доведем до результата ваш сайт и/или улучшим его, интегрируем ПО. У нас представлены разные пакеты услуг по функционалу сопровождения и технической поддержки. Мы постоянно повышаем качество обслуживания наших клиентов и честно относимся к ним, внедряем гибкие методики управления и реагирования на проблемы.</p>
@@ -46,22 +46,22 @@
         <div class="page-pros">
             <p class="page-pros-title">Плюсы работы с нами</p>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/qualification.svg" alt="qualification"/>
-                <p class="pros-item-header">Квалификация</p>
+                <img class="pros-item-img" src="@img/icons/icons.svg#qualification.svg" alt="qualification"/>
+                <p class="pros-item-header">Квалификация сотрудников</p>
                 <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/calendar.svg" alt="calendar"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#calendar.svg" alt="calendar"/>
                 <p class="pros-item-header">Опыт более 12 лет</p>
                 <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/internet-shops/complex.svg" alt="complex"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#complex.svg" alt="complex"/>
                 <p class="pros-item-header">Индивидуальный подход</p>
                 <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
             </div>
             <div class="page-pros-item">
-                <img class="pros-item-img" src="../img/development/transparency.svg" alt="transparency"/>
+                <img class="pros-item-img" src="@img/icons/icons.svg#transparency.svg" alt="transparency"/>
                 <p class="pros-item-header">Максимальная прозрачность</p>
                 <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
             </div>
@@ -71,35 +71,35 @@
             <p class="page-costs-header">Стоимость услуг</p>
             <div class="page-costs-block">
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet1.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet1" alt="wallet1"/>
                     <p class="costs-item-header">От 4000 рублей/мес.</p>
                     <p class="costs-item-text">При заключении договора от 12 месяцев</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet2.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet2" alt="wallet2"/>
                     <p class="costs-item-header">От 4500 рублей/мес.</p>
                     <p class="costs-item-text">При заключении договора от 6 месяцев</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet3.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet3" alt="wallet3"/>
                     <p class="costs-item-header">От 5500 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 3 месяц</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
                 <div class="page-costs-item">
-                    <img class="costs-item-img" src="../img/support/Wallet4.svg" alt="transparency"/>
+                    <img class="costs-item-img" src="@img/icons/icons.svg#wallet4" alt="wallet4"/>
                     <p class="costs-item-header">До 8000 рублей/мес.</p>
                     <p class="costs-item-text">При единоразовой оплате за 1 месяц</p>
                     <button class="costs-item-btn">Заказать
-                        <img class="page-arrow" src="../img/services/arrow.svg" alt="arrow"/>
+                        <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
                     </button>
                 </div>
             </div>
@@ -108,23 +108,23 @@
         <div class="page-list-block">
             <p class="page-list-title">В список услуги входит:</p>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Редактирование контента сайта: дополнение, создание, наполнение, редизайн и доработка текущего</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Мониторинг по безопасности: защита от вирусов, установка модулей</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Оптимизация скорости работы сайта</span>
             </div>
             <div class="page-list-item">
-                <img class="page-list-img" src="../img/home/resize-horizontal-round.svg" alt="resize"/>
+                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
                 <span class="page-list-text">Консультации</span>
             </div>
         </div>
