fix: correct prefooter markup and styles

--- a/src/html/home/prefooter.html
+++ b/src/html/home/prefooter.html
@@ -17,8 +17,12 @@
         </div>
     </div>
     <div class="feedback">
-        <p class="feedback-title">Так же вы можете связаться с нами с помощью формы обратной связи</p>
-        <img class="feedback-arrow" src="../img/prefooter/arrowdown.svg" alt="arrowdown"/>
+        <div class="feedback-wrapper">
+            <p class="feedback-title">Так же вы можете связаться с нами с помощью формы обратной связи</p>
+            <div class="feedback-arrow-wrap">
+                <img class="feedback-arrow" src="../img/prefooter/arrowdown.svg" alt="arrowdown"/>
+            </div>
+        </div>
     </div>
         </div>
     </div>
