feat: add some markup and styles for site-dev section

--- a/src/site-development.html
+++ b/src/site-development.html
@@ -3,8 +3,18 @@
   @@include('html/head.html', { "title": "Разработка сайтов" })
   <body>
     @@include('html/header.html',{})
-    <main>
-
+    <main class="site-dev">
+      <div class="site-dev-wrapper">
+        <h2 class="site-dev-header services-name-header">Создание сайтов</h2>
+        <div class="site-dev-info">
+         <div class="site-dev-info-image"></div>
+          <p class="site-dev-info-text">Решение для начинающего <span>малого бизнеса</span></p>
+          <div class="site-dev-text-btn">
+            <p>То что нужно!</p>
+            <div class="site-dev-arrow-wrap"></div>
+          </div>
+        </div>
+      </div>
 <!--      @@include('html/development.html',{})-->
 <!--      @@include('html/internet-shops.html',{})-->
 <!--      @@include('html/1C-integration.html',{})-->
