create main page, services styles

--- a/src/html/home/fifth-screen.html
+++ b/src/html/home/fifth-screen.html
@@ -11,22 +11,22 @@
             <div class="fifth-screen-container">
                 <div class="fifth-screen-container-box">
                     <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#private" alt="private"/>
-                    <p class="fifth-screen-container-box-title">Личный кабинет и тарификация</p>
+                    <div class="fifth-screen-container-box-title">Личный кабинет и тарификация</div>
                     <p class="fifth-screen-container-box-text">Личный кабинет клиента, в котором вы можете в режиме реал-тайм видеть, какие задачи и на какую сумму в данный момент сделаны, какие в работе.</p>
                 </div>
                 <div class="fifth-screen-container-box">
                     <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#team" alt="team"/>
-                    <p class="fifth-screen-container-box-title">Наша команда</p>
+                    <div class="fifth-screen-container-box-title">Наша команда</div>
                     <p class="fifth-screen-container-box-text">У нас 39 разработчиков в штате, что позволяет нам собирать команды под ваши нужды.</p>
                 </div>
                 <div class="fifth-screen-container-box">
                     <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#certificate" alt="team"/>
-                    <p class="fifth-screen-container-box-title">Сертификация</p>
+                    <div class="fifth-screen-container-box-title">Сертификация</div>
                     <p class="fifth-screen-container-box-text">Все сотрудники прошли сертификацию Битрикса - на ваших проектах будут работать только проверенные разработчики.</p>
                 </div>
                 <div class="fifth-screen-container-box">
                     <img class="fifth-screen-container-box-img" src="@img/icons/icons.svg#clock" alt="team"/>
-                    <p class="fifth-screen-container-box-title">Сроки работы</p>
+                    <div class="fifth-screen-container-box-title">Сроки работы</div>
                     <p class="fifth-screen-container-box-text">Вы и ваш клиент всегда знаете, когда мы начнем работу над задачей и когда закончим, так как все работы оцениваются и имеют сроки сдачи.</p>
                 </div>
 
