--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
       @@include('html/home/forth-screen.html',{})
       @@include('html/home/fifth-screen.html',{})
       @@include('html/home/sixth-screen.html',{})
-      @@include('html/home/services.html',{})
+<!--      @@include('html/home/services-sites.html',{})-->
+<!--      @@include('html/home/services-internet-shops.html',{})-->
+<!--      @@include('html/home/services-1C-integration.html',{})-->
 <!--      @@include('html/development.html',{})-->
 <!--      @@include('html/internet-shops.html',{})-->
 <!--      @@include('html/1C-integration.html',{})-->
@@ -31,7 +33,7 @@
 <!--      @@include('html/specialists.html',{})-->
 <!--      @@include('html/mobile.html',{})-->
 <!--      @@include('html/plug.html',{})-->
-      @@include('html/home/prefooter.html',{})
+<!--      @@include('html/home/prefooter.html',{})-->
 
     </main>
     @@include('html/footer.html',{})
