add services styles

--- a/src/html/home/services-1C-integration.html
+++ b/src/html/home/services-1C-integration.html
@@ -54,9 +54,11 @@
 
                         <div class="services-image">
                             <img class="services-image-vectors" src="../../img/services/vectors.png" alt="vectors"/>
-                            <img class="services-image-additional-1" src="../../img/services/integration-2.png" alt="integration-2"/>
-                            <img class="services-image-main" src="../../img/services/integration-1.png" alt="integration-1"/>
-                            <img class="services-image-additional-2" src="../../img/services/integration-3.png" alt="integration-3"/>
+                            <img class="services-image-additional-1" src="../../img/services/internet-shops-2.png" alt="internet-shops-2"/>
+                            <img class="services-image-additional-1" src="../../img/services/turbid-1.png" alt="turbid-1"/>
+                            <img class="services-image-main" src="../../img/services/1C-integration-1.png" alt="integration-1"/>
+                            <img class="services-image-additional-2" src="../../img/services/site-support-2.png" alt="site-support-2"/>
+                            <img class="services-image-additional-2" src="../../img/services/turbid-2.png" alt="turbid-2"/>
                         </div>
 
                         <div class="services-lower">
