--- a/src/html/home/services-internet-shops.html
+++ b/src/html/home/services-internet-shops.html
@@ -54,9 +54,11 @@
 
                         <div class="services-image">
                             <img class="services-image-vectors" src="../../img/services/vectors.png" alt="vectors"/>
-                            <img class="services-image-additional-1" src="../../img/services/internet-shops-2.png" alt="internet-shops-2"/>
+                            <img class="services-image-additional-1" src="../../img/services/site-development.png" alt="site-development"/>
+                            <img class="services-image-additional-1" src="../../img/services/turbid-1.png" alt="turbid-1"/>
                             <img class="services-image-main" src="../../img/services/internet-shops-1.png" alt="internet-shops-1"/>
-                            <img class="services-image-additional-2" src="../../img/services/internet-shops-3.png" alt="internet-shops-3"/>
+                            <img class="services-image-additional-2" src="../../img/services/1C-integration-2.png" alt="1C-integration-2"/>
+                            <img class="services-image-additional-2" src="../../img/services/turbid-2.png" alt="turbid-2"/>
                         </div>
 
                         <div class="services-lower">
