--- a/src/html/home/services-sites.html
+++ b/src/html/home/services-sites.html
@@ -8,16 +8,18 @@
 <!--@@include('html/header.html',{})-->
 <main>
     <section class="services">
-        <div class="services-inner">
-            <div class="services-wrapper">
+
                 <div class="page-breadcrumbs">
                     <span class="page-breadcrumbs-text">Главная</span>
                     <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
                     <span class="page-breadcrumbs-text">Наши специалисты</span>
                 </div>
-
-
-                <div class="services-container">
+                        <div class="bitrix-gallery">
+                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 203.png" alt="frame1"/>
+                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 204.png" alt="frame2"/>
+                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 205.png" alt="frame3"/>
+                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 206.png" alt="frame4"/>
+                        </div>
 
                     <aside class="connection-block">
                         <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
@@ -34,6 +36,8 @@
                     </aside>
 
                     <div class="services-content">
+                                <div class="services-inner">
+                                    <div class="services-wrapper">
                         <p class="page-title">Услуги</p>
 
                         <div class="services-block">
@@ -51,17 +55,20 @@
                             <span class="services-block-item">Техническое сопровождение сайтов</span>
                             <span class="services-block-item">Интеграции</span>
                         </div>
-
-
-
+                                    </div>
+                                </div>
 
                         <div class="services-image">
-                            <img class="services-image-vectors" src="../../img/services/vectors.png" alt="vectors"/>
-                            <img class="services-image-additional-1" src="../../img/services/sites-2.png" alt="sites-2"/>
-                            <img class="services-image-main" src="../../img/services/sites-1.png" alt="sites-1"/>
-                            <img class="services-image-additional-2" src="../../img/services/sites-3.png" alt="sites-3"/>
+                            <img class="services-image-additional-1" src="../../img/services/integrations-2.png" alt="sites-2"/>
+                            <img class="services-image-turbid-1" src="../../img/services/turbid-1.png" alt="turbid-1"/>
+                            <img class="services-image-main" src="../../img/services/site-development.png" alt="site-development"/>
+                            <img class="services-image-additional-2" src="../../img/services/internet-shops-2.png" alt="sites-3"/>
+                            <img class="services-image-turbid-2" src="../../img/services/turbid-2.png" alt="turbid-2"/>
 
                         </div>
+
+                        <div class="services-inner">
+                            <div class="services-wrapper">
 
                         <div class="services-lower">
                             <div class="services-name">
@@ -105,21 +112,14 @@
                                 </div>
                             </div>
                         </div>
+                            </div>
+                        </div>
 
 
 
                 </div>
 
-                </div>
-                <div class="bitrix-gallery">
-                    <img class="bitrix-gallery-item" src="../img/prefooter/Frame 203.png" alt="frame1"/>
-                    <img class="bitrix-gallery-item" src="../img/prefooter/Frame 204.png" alt="frame2"/>
-                    <img class="bitrix-gallery-item" src="../img/prefooter/Frame 205.png" alt="frame3"/>
-                    <img class="bitrix-gallery-item" src="../img/prefooter/Frame 206.png" alt="frame4"/>
-                </div>
 
-            </div>
-        </div>
     </section>
 
 
@@ -230,7 +230,7 @@
 <!--                    <img class="feedback-arrow" src="../img/prefooter/arrowdown.svg" alt="arrowdown"/>-->
 <!--                </div>-->
             </div>
-        </div>
+<!--        </div>-->
 
     </section>
 </main>
