header and start main page adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
       @@include('html/home/second-screen.html',{})
       @@include('html/home/third-screen.html',{})
       @@include('html/home/forth-screen.html',{})
-      @@include('html/home/fifth-screen.html',{})
-      @@include('html/home/sixth-screen.html',{})
+<!--      @@include('html/home/fifth-screen.html',{})-->
+<!--      @@include('html/home/sixth-screen.html',{})-->
 <!--      @@include('html/home/services-sites.html',{})-->
 <!--      @@include('html/home/services-internet-shops.html',{})-->
 <!--      @@include('html/home/services-1C-integration.html',{})-->
@@ -36,7 +36,7 @@
 <!--      @@include('html/home/prefooter.html',{})-->
 
     </main>
-    @@include('html/footer.html',{})
+<!--    @@include('html/footer.html',{})-->
     <script src="js/app.min.js"></script>
   </body>
 </html>
