--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header>
+ <header>
   <a class="header-logo" href="/"><img src="@img/icons/icons.svg#logo" alt="logo" /></a>
   <ul class="header-menu">
     <li class="header-menu-item">Услуги
@@ -10,9 +10,12 @@
     <li class="header-menu-item">Блог</li>
     <li class="header-menu-item">Контакты</li>
   </ul>
+<!--   <div>-->
   <a class="header-phone" href="+7 980 375 22 54">
     <img class="header-phone-icon" src="@img/icons/icons.svg#shape" alt="phone" />
     <span class="header-phone-text"> +7 980 375 22 54 </span>
     <img class="header-phone-arrow" src="@img/icons/icons.svg#arrow" alt="arrow" />
   </a>
+   <img class="header-menu-burger" src="@img/icons/icons.svg#menu" alt="arrow" />
+<!--   </div>-->
 </header>
