--- a/src/html/home/services-sites.html
+++ b/src/html/home/services-sites.html
@@ -9,115 +9,119 @@
 <main>
     <section class="services">
 
-                <div class="page-breadcrumbs">
-                    <span class="page-breadcrumbs-text">Главная</span>
-                    <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
-                    <span class="page-breadcrumbs-text">Наши специалисты</span>
+        <div class="page-breadcrumbs">
+            <span class="page-breadcrumbs-text">Главная</span>
+            <img class="page-breadcrumbs-arrow" src="@img/icons/icons.svg#arrowBread" alt="arrow"/>
+            <span class="page-breadcrumbs-text">Наши специалисты</span>
+        </div>
+        <div class="bitrix-gallery">
+            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 203.png" alt="frame1"/>
+            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 204.png" alt="frame2"/>
+            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 205.png" alt="frame3"/>
+            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 206.png" alt="frame4"/>
+        </div>
+
+        <aside class="connection-block">
+            <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
+            <p class="connection-block-title">Мы на связи</p>
+            <p class="connection-block-text">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
+            <button class="connection-block-btn">Задать вопрос
+                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
+            </button>
+            <div class="connection-block-icons">
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
+                <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
+            </div>
+        </aside>
+
+        <div class="services-content">
+            <div class="services-wrapper">
+                <div class="services-inner">
+                    <p class="page-title">Услуги</p>
+
+                    <div class="services-block">
+                        <span class="services-block-item">Создание сайтов</span>
+                        <span class="services-block-item">Разработка интернет-магазина</span>
+                        <span class="services-block-item">Интеграция с 1С</span>
+                        <span class="services-block-item">Поддержка сайтов</span>
+                        <span class="services-block-item">Битрикс24.CRM</span>
+                        <span class="services-block-item">Разработка мобильных игр и приложений</span>
+                        <span class="services-block-item">amoCRM</span>
+                        <span class="services-block-item">Поддержка CRM</span>
+                        <span class="services-block-item">Анализ и оптимизация бизнес-процессов</span>
+                        <span class="services-block-item">Автоматизация бизнес-процессов</span>
+                        <span class="services-block-item">Техническое сопровождение CRM</span>
+                        <span class="services-block-item">Техническое сопровождение сайтов</span>
+                        <span class="services-block-item">Интеграции</span>
+                    </div>
                 </div>
-                        <div class="bitrix-gallery">
-                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 203.png" alt="frame1"/>
-                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 204.png" alt="frame2"/>
-                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 205.png" alt="frame3"/>
-                            <img class="bitrix-gallery-item" src="../img/prefooter/Frame 206.png" alt="frame4"/>
-                        </div>
+            </div>
 
-                    <aside class="connection-block">
-                        <img class="connection-block-img" src="@img/icons/icons.svg#Icon" alt="connection"/>
-                        <p class="connection-block-title">Мы на связи</p>
-                        <p class="connection-block-text">Наши специалисты ответят на любой интересующий вопрос по услуге</p>
-                        <button class="connection-block-btn">Задать вопрос
-                            <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
-                        </button>
-                        <div class="connection-block-icons">
-                            <img class="connection-block-icon" src="@img/icons/icons.svg#call1" alt="call1"/>
-                            <img class="connection-block-icon" src="@img/icons/icons.svg#call2" alt="call2"/>
-                            <img class="connection-block-icon" src="@img/icons/icons.svg#call3" alt="call3"/>
-                        </div>
-                    </aside>
+            <div class="services-image">
+                <img class="services-image-additional-1" src="../../img/services/integrations-2.png" alt="sites-2"/>
+                <img class="services-image-turbid-1" src="../../img/services/turbid-1.png" alt="turbid-1"/>
+                <img class="services-image-main" src="../../img/services/site-development.png" alt="site-development"/>
+                <img class="services-image-additional-2" src="../../img/services/internet-shops-2.png" alt="sites-3"/>
+                <img class="services-image-turbid-2" src="../../img/services/turbid-2.png" alt="turbid-2"/>
 
-                    <div class="services-content">
-                                <div class="services-inner">
-                                    <div class="services-wrapper">
-                        <p class="page-title">Услуги</p>
+            </div>
 
-                        <div class="services-block">
-                            <span class="services-block-item">Создание сайтов</span>
-                            <span class="services-block-item">Разработка интернет-магазина</span>
-                            <span class="services-block-item">Интеграция с 1С</span>
-                            <span class="services-block-item">Поддержка сайтов</span>
-                            <span class="services-block-item">Битрикс24.CRM</span>
-                            <span class="services-block-item">Разработка мобильных игр и приложений</span>
-                            <span class="services-block-item">amoCRM</span>
-                            <span class="services-block-item">Поддержка CRM</span>
-                            <span class="services-block-item">Анализ и оптимизация бизнес-процессов</span>
-                            <span class="services-block-item">Автоматизация бизнес-процессов</span>
-                            <span class="services-block-item">Техническое сопровождение CRM</span>
-                            <span class="services-block-item">Техническое сопровождение сайтов</span>
-                            <span class="services-block-item">Интеграции</span>
-                        </div>
-                                    </div>
+            <div class="services-wrapper">
+                <div class="services-inner">
+
+                    <div class="services-lower">
+                        <div class="services-name">
+                            <div class="swiper-arrows">
+                                <div class="swiper-arrow swiper-arrow-prev">
+                                    <img src="@img/icons/icons.svg#arrow-slider" alt="arrow"/>
                                 </div>
-
-                        <div class="services-image">
-                            <img class="services-image-additional-1" src="../../img/services/integrations-2.png" alt="sites-2"/>
-                            <img class="services-image-turbid-1" src="../../img/services/turbid-1.png" alt="turbid-1"/>
-                            <img class="services-image-main" src="../../img/services/site-development.png" alt="site-development"/>
-                            <img class="services-image-additional-2" src="../../img/services/internet-shops-2.png" alt="sites-3"/>
-                            <img class="services-image-turbid-2" src="../../img/services/turbid-2.png" alt="turbid-2"/>
-
-                        </div>
-
-                        <div class="services-inner">
-                            <div class="services-wrapper">
-
-                        <div class="services-lower">
-                            <div class="services-name">
-                                <div class="swiper-arrows">
-                                    <div class="swiper-arrow swiper-arrow-prev">
-                                        <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-                                    </div>
-                                    <div class="swiper-arrow swiper-arrow-next">
-                                        <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-                                    </div>
+                                <div class="swiper-arrow swiper-arrow-next">
+                                    <img src="@img/icons/icons.svg#arrow-slider" alt="arrow"/>
                                 </div>
-
-                                <p class="services-name-title">Создание сайтов</p>
-                                <button class="details-btn">Подронее
-                                    <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
-                                </button>
                             </div>
 
-                            <div class="page-list">
-                                <p class="page-list-title">В зависимости от бизнес-задач будущего ресурса мы готовы предложить:</p>
-                                <div class="page-list-list">
-                                    <div class="page-list-item">
-                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                        <span class="page-list-text">Готовые сайты под ключ (здесь можно сделать переход на наш лендинг с визитками шаблонными)</span>
-                                    </div>
-                                    <div class="page-list-item">
-                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                        <span class="page-list-text">Индивидуальные решения под любой бизнес</span>
-                                    </div>
+                            <p class="services-name-title">Создание сайтов</p>
+                            <button class="details-btn">Подронее
+                                <img class="page-arrow" src="@img/icons/icons.svg#arrowRight" alt="arrow"/>
+                            </button>
+                        </div>
+
+                        <div class="page-list">
+                            <p class="page-list-title">В зависимости от бизнес-задач будущего ресурса мы готовы
+                                предложить:</p>
+                            <div class="page-list-list">
+                                <div class="page-list-item">
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round"
+                                         alt="resize"/>
+                                    <span class="page-list-text">Готовые сайты под ключ (здесь можно сделать переход на наш лендинг с визитками шаблонными)</span>
                                 </div>
-                                <p class="page-list-title">Плюсы работы с нами: </p>
-                                <div class="page-list-list">
-                                    <div class="page-list-item">
-                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                        <span class="page-list-text">сертифицированные сотрудники с опытом работы не менее 3х лет</span>
-                                    </div>
-                                    <div class="page-list-item">
-                                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                        <span class="page-list-text">максимальная прозрачность - вы будете в курсе всех задач и результатов...</span>
-                                    </div>
+                                <div class="page-list-item">
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round"
+                                         alt="resize"/>
+                                    <span class="page-list-text">Индивидуальные решения под любой бизнес</span>
+                                </div>
+                            </div>
+                            <p class="page-list-title">Плюсы работы с нами: </p>
+                            <div class="page-list-list">
+                                <div class="page-list-item">
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round"
+                                         alt="resize"/>
+                                    <span class="page-list-text">сертифицированные сотрудники с опытом работы не менее 3х лет</span>
+                                </div>
+                                <div class="page-list-item">
+                                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round"
+                                         alt="resize"/>
+                                    <span class="page-list-text">максимальная прозрачность - вы будете в курсе всех задач и результатов...</span>
                                 </div>
                             </div>
                         </div>
-                            </div>
-                        </div>
-
-
-
+                    </div>
                 </div>
+            </div>
+
+
+        </div>
 
 
     </section>
@@ -128,12 +132,12 @@
             <div class="prefooter-wrapper">
 
                 <div class="second-screen-intouch">
-                    <img src="../img/prefooter/image 18.png" alt="eyes" />
+                    <img src="../img/prefooter/image 18.png" alt="eyes"/>
                     <h2>Мы на связи:</h2>
                     <div class="second-screen-intouch-icons">
-                        <a href=""><img src="@img/icons/icons.svg#telegram" alt="telegram" /></a>
-                        <a href=""><img src="@img/icons/icons.svg#viber" alt="viber" /></a>
-                        <a href=""><img src="@img/icons/icons.svg#whatsapp" alt="whatsapp" /></a>
+                        <a href=""><img src="@img/icons/icons.svg#telegram" alt="telegram"/></a>
+                        <a href=""><img src="@img/icons/icons.svg#viber" alt="viber"/></a>
+                        <a href=""><img src="@img/icons/icons.svg#whatsapp" alt="whatsapp"/></a>
                     </div>
                 </div>
                 <div class="second-screen-inner feedback-inner">
@@ -142,7 +146,7 @@
                             Так же вы можете связаться с нами с помощью формы обратной связи
                         </p>
                         <div class="second-screen-feedback-arrow arrow-feedback">
-                            <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+                            <img src="@img/icons/icons.svg#arrow-slider" alt="arrow"/>
                         </div>
                         <form class="second-screen-feedback-form">
                             <h3 class="second-screen-feedback-form-title">Напишите нам</h3>
@@ -202,7 +206,7 @@
                             <div class="second-screen-feedback-form-bottom">
                                 <div class="second-screen-feedback-form-agreement">
                                     <label class="second-screen-feedback-form-switch">
-                                        <input name="feedback" type="checkbox" />
+                                        <input name="feedback" type="checkbox"/>
                                         <span></span>
                                     </label>
                                     <span class="second-screen-feedback-form-agreement-text"
@@ -216,22 +220,22 @@
                         </form>
                     </div>
                 </div>
-<!--                <div class="connection">-->
-<!--                    <img src="../img/prefooter/image 18.png" alt="eyes" />-->
-<!--                    <div class="connection-block">-->
-<!--                        <span class="connection-title">Мы на связи:</span>-->
-<!--                        <img class="connection-img" src="../img/prefooter/call1.svg" alt="call1"/>-->
-<!--                        <img class="connection-img" src="../img/prefooter/call2.svg" alt="call2"/>-->
-<!--                        <img class="connection-img" src="../img/prefooter/call3.svg" alt="call3"/>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="feedback">-->
-<!--                    <p class="feedback-title">Так же вы можете связаться с нами с помощью формы обратной связи</p>-->
-<!--                    <img class="feedback-arrow" src="../img/prefooter/arrowdown.svg" alt="arrowdown"/>-->
-<!--                </div>-->
+                <!--                <div class="connection">-->
+                <!--                    <img src="../img/prefooter/image 18.png" alt="eyes" />-->
+                <!--                    <div class="connection-block">-->
+                <!--                        <span class="connection-title">Мы на связи:</span>-->
+                <!--                        <img class="connection-img" src="../img/prefooter/call1.svg" alt="call1"/>-->
+                <!--                        <img class="connection-img" src="../img/prefooter/call2.svg" alt="call2"/>-->
+                <!--                        <img class="connection-img" src="../img/prefooter/call3.svg" alt="call3"/>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="feedback">-->
+                <!--                    <p class="feedback-title">Так же вы можете связаться с нами с помощью формы обратной связи</p>-->
+                <!--                    <img class="feedback-arrow" src="../img/prefooter/arrowdown.svg" alt="arrowdown"/>-->
+                <!--                </div>-->
             </div>
-<!--        </div>-->
-
+            <!--        </div>-->
+        </div>
     </section>
 </main>
 <!--@@include('html/footer.html',{})-->
