main page styles adaptive

--- a/src/html/home/first-screen.html
+++ b/src/html/home/first-screen.html
@@ -74,6 +74,11 @@
         <p class="first-screen-facts-item-text">Локация<br> специалистов:<br> Россия-Беларусь</p>
       </div>
     </div>
+  <div class="first-screen-rectangles">
+    <img class="first-screen-rectangles-item" src="@img/icons/icons.svg#rectangle-blue" alt="rectangle-blue" />
+    <img class="first-screen-rectangles-item" src="@img/icons/icons.svg#rectangle" alt="rectangle" />
+    <img class="first-screen-rectangles-item" src="@img/icons/icons.svg#rectangle" alt="rectangle" />
+  </div>
     <div class="first-screen-separator">
     </div>
   </section>
