--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
       @@include('html/home/second-screen.html',{})
       @@include('html/home/third-screen.html',{})
       @@include('html/home/forth-screen.html',{})
-<!--      @@include('html/home/fifth-screen.html',{})-->
-<!--      @@include('html/home/sixth-screen.html',{})-->
+      @@include('html/home/fifth-screen.html',{})
+      @@include('html/home/sixth-screen.html',{})
 <!--      @@include('html/home/services-sites.html',{})-->
 <!--      @@include('html/home/services-internet-shops.html',{})-->
 <!--      @@include('html/home/services-1C-integration.html',{})-->
